--- a/modelo3/templates/index.html
+++ b/modelo3/templates/index.html
@@ -5,14 +5,14 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>Surreal Studio</title>
+	<title>Maneschy.com</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 	<!-- CSS Styles -->
     <link rel="stylesheet" type="text/css" href="css/skeleton.css">	
-	<link rel="stylesheet" type="text/css" href="css/layout.css">
+	<link rel="stylesheet" type="text/css" href="css/layout-white.css">
     <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
     
     <!-- Favicons -->
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
 	<!-- Google Web Fonts -->
-	<link href="http://fonts.googleapis.com/css?family=Shadows+Into+Light|Oswald:400,300,700" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:300,600,900' rel='stylesheet' type='text/css'>
     
     <!-- JavaScripts -->
     <script type="text/javascript" src="js/prefixfree.min.js"></script>
@@ -102,12 +102,14 @@
 
 <body>
 
+
+    
 <!-- Start Homepage -->
 	<div id="homepage" class="homepage section">
 		
 		<div class="container">
 			<div class="sixteen columns">
-				<img alt="" class="logo" src="images/logo.png" />
+				<img alt="" class="logo" src="images/logo-simbol.png" />
 			</div>
 			
 			<div class="slider-text">
@@ -138,7 +140,7 @@
 			<div class="sixteen columns">
 				
 				<!-- Start Nav Menu -->
-				<ul class="menu" id="nav">
+				<ul class="menu" id="nav">					<li><a href="#homepage"><img src="images/logo-maneschy.png" alt="" /></i></a></li>
 					<li><a href="#homepage">Home</a></li>
                     <li><a href="#folio">Portfolio</a></li>
 					<li><a href="#about">About</a></li>
@@ -1125,15 +1127,15 @@
                  <section class="slider">
                     <div id="carouselSlider" class="flexslider carousel">
                        <ul class="slides">
-                          <li><img src="images/logos/Marlin-white.png" alt="Marlin" /></li>
-                          <li><img src="images/logos/Aquatic-white.png" alt="Aquatic"/></li>
-                          <li><img src="images/logos/Dalmation-Design-white.png" alt="Dalmation Design" /></li>
-                          <li><img src="images/logos/Imperius-Horse-white.png" alt="Imperius" /></li>
-                          <li><img src="images/logos/Octopixel-white.png" alt="Octopixel" /></li>
-                          <li><img src="images/logos/Sirius-white.png" alt="Sirius" /></li>
-                          <li><img src="images/logos/Solenergy-white.png" alt="Solenergy" /></li>
-                          <li><img src="images/logos/Spiralus-Multimedia-white.png" alt="Spiralus" /></li>
-                          <li><img src="images/logos/Think-pink-white.png" alt="Think Pink" /></li>
+                          <li><img src="images/logos/Marlin.png" alt="Marlin" /></li>
+                          <li><img src="images/logos/Aquatic.png" alt="Aquatic"/></li>
+                          <li><img src="images/logos/Dalmation-Design.png" alt="Dalmation Design" /></li>
+                          <li><img src="images/logos/Imperius-Horse.png" alt="Imperius" /></li>
+                          <li><img src="images/logos/Octopixel.png" alt="Octopixel" /></li>
+                          <li><img src="images/logos/Sirius.png" alt="Sirius" /></li>
+                          <li><img src="images/logos/Solenergy.png" alt="Solenergy" /></li>
+                          <li><img src="images/logos/Spiralus-Multimedia.png" alt="Spiralus" /></li>
+                          <li><img src="images/logos/Think-pink.png" alt="Think Pink" /></li>
                        </ul>
                     </div>
                  </section>
@@ -1156,7 +1158,7 @@
 
 <script type="text/javascript">
 	  $('#carouselSlider').flexslider({
-		animation: "slide",
+		animation: "fade",
 		animationLoop: true,
 		itemWidth: 237,
 		itemMargin: 2,
