--- a/modelo3/templates/index.html
+++ b/modelo3/templates/index.html
@@ -141,10 +141,9 @@
 				<!-- Start Nav Menu -->
 				<ul class="menu" id="nav" style="padding-top: 15px;">
 					<li><a href="#homepage">Home</a></li>
-                    <li><a href="#folio">Portfolio</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#services">Services</a></li>
-                    <li><a href="#features">Features</a></li>
+                    <li><a href="#folio">o que fazemos</a></li>
+					<li><a href="#about">maneschy.com</a></li>
+					<li><a href="#services">portifólio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 				<!-- End Nav Menu -->
